# sunshine

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cloudbuild.yaml  config.yaml  entrypoint.py  entrypoint_job.py  pyproject.toml  requirements.txt
sunshine/: __init__.py  __main__.py  analyzer.py  backtester.py  bot.py  cli.py  config.py  fasttrader.py  fetcher.py  models.py  scorer.py  state.py  storage.py  technical.py  trader.py
