[project]
name = "sunshine"
version = "0.1.0"
description = "Truth Social trading bot — monitors Trump's posts and generates trade signals"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "alpaca-py>=0.33.0",
    "curl_cffi>=0.7.0",
    "anthropic>=0.40.0",
    "rich>=13.0.0",
    "yfinance>=1.4.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
]

[project.scripts]
sunshine = "sunshine.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sunshine*"]
